services/event-hub-site/helm/blue-green-deploy/nebula-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-hub-global-lb
spec:
  defaultBackend:
    service:
      name: event-hub-site-nebula
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: event-hub-site-nebula
            port:
              number: 80
